Fix alignment of details in search filters

--- a/app/assets/stylesheets/_filters.scss
+++ b/app/assets/stylesheets/_filters.scss
@@ -9,8 +9,13 @@
 
   // Adjust design and spacing of details component
   .nhsuk-details {
-    margin-left: #{nhsuk-spacing(5) * -1};
-    margin-right: #{nhsuk-spacing(5) * -1};
+    margin-left: #{nhsuk-spacing(4) * -1};
+    margin-right: #{nhsuk-spacing(4) * -1};
+
+    @include mq($from: tablet) {
+      margin-left: #{nhsuk-spacing(5) * -1};
+      margin-right: #{nhsuk-spacing(5) * -1};
+    }
 
     &[open] {
       background-color: $color_nhsuk-grey-4;
